# python-openmw-toolkit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
addon/: __init__.py  builder.py
addon/types/: __init__.py  cell.py  dialogue.py  item.py  npc.py  script.py  spell.py
docs/: builder-api.md  gotchas.md  lua-api.md  mwscript-cfg.md  tes3-format.md
examples/01_hello_world/: build.py  hello_world.omwaddon
examples/02_custom_npc/: build.py  custom_npc.omwaddon
examples/03_scripted_item/: build.py  scripted_item.omwaddon
examples/04_lua_global/: build.py  lua_global_example.omwaddon  lua_global_example.omwscripts
examples/05_interior_cell/: build.py  interior_cell.omwaddon
hub_annex/: build.py  hub_annex.omwaddon
hub_world/: README.md  build.py  build_all.py  generate_meshes.py  hub_world.omwaddon  hub_world.omwscripts  settings.ini
hub_world/data/icons/hub_world/: herb_basil.dds  herb_mint.dds  mortar-1.dds
hub_world/data/meshes/hub_world/: anvil.dae  apparatus_alembic.dae  apparatus_calcinator.dae  apparatus_mortar.dae  apparatus_retort.dae  axe_iron.dae  axe_wooden.dae  bed.dae  branch.dae  door_brown.dae  door_gray.dae  door_green.dae  floor_forest.dae  floor_garden.dae  floor_hub.dae  floor_mine.dae  forge.dae  herb_item.dae  ingot.dae  instrument.dae  log.dae  mine_refresh.dae  mineral_iron.dae  mineral_stone.dae  pass_token.dae  (+15 more)
hub_world/data/textures/: hw_brick.dds
tes3/: README.md  __init__.py  db.py  reader.py  schema.py  writer.py
tests/: test_roundtrip.py
tools/: __init__.py  diff.py  dump.py  from_db.py  to_db.py  validate.py
(+5 files in other folders)
